# shard

./: .Rbuildignore  .gitignore  404.html  AGENTS.html  AGENTS.md  CLAUDE.html  CLAUDE.md  CRAN-SUBMISSION  Cargo.toml  DESCRIPTION  LICENSE-text.html  LICENSE.html  LICENSE.md  NAMESPACE  NEWS.md  PRD.benchmark.json  PRD.ergonomics.json  PRD.json  PRD.optimizations.json  PRD.tables.json  PRD.views.json  README.md  _pkgdown.yml  authors.html  authors.md  cran-comments.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml  why-shard-is-different.html  why-shard-is-different.md
.planning/: 2026-07-03-efficiency-overhaul.md  2026-07-04-phase3-handoff.md  2026-07-04-phase4-review-handoff.md  2026-07-04-phase4a-data-plane-handoff.md  2026-07-04-phase4b-c-buffer-io-handoff.md
R/: adapter.R  affinity.R  altrep.R  arena.R  buffer.R  cow.R  diagnostics.R  dispatch.R  dispatch_shm_queue.R  ergonomics.R  kernel_registry.R  kernels.R  pool.R  queue.R  results_placeholder.R  rss.R  scratch.R  segment.R  shard-package.R  shard_map.R  shard_reduce.R  shards.R  shards_lazy.R  share.R  shm_queue.R  table_stream.R  tables.R  utils.R  views.R  worker.R  zzz.R
articles/: index.html  index.md  shard.html  shard.md
doShard/: DESCRIPTION  LICENSE  NAMESPACE
man/: affinity_supported.Rd  arena.Rd  arena_depth.Rd  as_shared.Rd  as_tibble.Rd  assert_positive_int.Rd  autotune_block_size.Rd  available_backings.Rd  buffer.Rd  buffer_advise.Rd  buffer_close.Rd  buffer_diagnostics.Rd  buffer_info.Rd  buffer_open.Rd  buffer_path.Rd  capture_time.Rd  close.shard_shared.Rd  (+149 more)
(+578 files in other folders)
